--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@ section{
   padding: 1em;
 }
 
+section p{
+  font-size: 20px;
+  font-weight: bolder;
+  color: black;
+}
+
 header, main, footer {
   margin: 0 auto;
 }
@@ -109,7 +115,7 @@ a .fab {
 }
 
 .skills .column {
-  -ms-flex: 0 0 50%%;
+  -ms-flex: 0 0 50%;
   flex: 0 0 50%;
   max-width: 50%;
 }
